# Telecom-Quantum-Teleportation-

./: README.md
quantum-interconnect-hybrid/: README.md  mkdocs.yml  pyproject.toml
quantum-interconnect-hybrid/bridge/: __init__.py  dcq_plugin.py  qcs_dcq_bridge.py
quantum-interconnect-hybrid/configs/: lab_snsdp.yaml
quantum-interconnect-hybrid/docs/: dcq_plugin.md  qchs_spec.md
quantum-interconnect-hybrid/proto/: dcq_plugin.proto
quantum-interconnect-hybrid/qcsd/: __init__.py  __main__.py
quantum-interconnect-hybrid/src/qinterconnect/: fiber.py  freespace.py  transduction.py
quantum-interconnect-hybrid/tests/: conftest.py  test_fiber.py  test_freespace.py  test_transduction.py
